Fixes tooltips, out-of-bounds rendering, and css.
Moving the cursor to underneath the points makes it so point
tooltips work as intended.
Out of bounds points no longer slide along axis when a new point
joins or leaves out-of-bounds.
Out of bounds marker points in the direction of the point.
CTATChart default css moves to CTATChart.css.

--- a/demo/index.css
+++ b/demo/index.css
@@ -1,6 +1,4 @@
 .CTATChart {
-    width: 400px;
-    height: 300px;
     flex: none;
 }
 
@@ -75,27 +73,4 @@
 .CTATSubmitButton>button.CTAT--incorrect::after {
     color: red;
     content: " \2717";
-}
-
-circle.CTATChart--point {
-    fill: black;
-    /*stroke: transparent;*/
-}
-circle.CTATChart--point.CTAT--incorrect {
-    fill: red;
-    /*stroke: rgba(255,50,50,0.6);*/
-    fill-opacity: 0.7;
-}
-circle.CTATChart--point.CTAT--correct {
-    /*stroke: rgba(0,240,0,0.7);*/
-    fill: limegreen;
-    fill-opacity: 0.7;
-}
-
-/*.CTATChart--grid .tick {
-    opacity: 0.1;
-}*/
-
-.CTATChart g.tick text {
-    user-select: none;
 }
